# CameraNetwork

./: .gitignore  INSTALL.md  LICENSE  README.md  TODO.md  gphoto2-updater.sh  install.sh  versionBumper.py
client/: install_client_camnet.sh  start_camnet.backup  start_camnet.sh
client/src/.pi_gpio/pi_gpio/: CMakeLists.txt
client/src/Util/: locker.py
client/src/camera_controler/: CMakeLists.txt  package.xml
client/src/camera_controler/launch/: camera_controler_gphoto.launch  camera_controler_mobile.launch  camera_controler_picam.launch
client/src/camera_drivers/: package.xml
client/src/camera_network_msgs/: CMakeLists.txt
client/src/pi_gpio/: package.xml
client/src/pi_gpio/include/pi_gpio/: pigpio_server.h
scripts/: CamNetTransfer.sh  camnet-organisator.py  gphoto2-updater.sh  move.py  organize.sh  organizer.py  versionBumper.py
scripts/Util/: __init__.py  cam_pw_manag.py  capture.py  command.py  constant.py  convert.py  extract.py  miscellaneous.py  organize.py  receive.py  send.py  sort.py  stop.py
scripts/test/: __init__.py  test_capture_AEB_with_preset.py  test_convert_month_StrToInt.py  test_convert_timestamp_second.py  test_create_folder_from_dictionary.py  test_extract_date_from_exif.py  test_extract_exif.py  test_extract_time_from_exif.py  test_get_raw_from_camera.py  test_move_rename_pix.py  test_organize_folder.py  test_send_folder_to.py  test_sort_pix_by_date.py  test_sort_pix_by_time.py  test_sort_pix_by_time_inside_date.py
server/: install_server.sh  launch.sh
server/src/camera_master_server/: CMakeLists.txt  package.xml  users.xml
server/src/camera_network_msgs/: CMakeLists.txt
src/camera_controler/: CMakeLists.txt  package.xml
src/camera_controler/action/: CameraControl.action
src/camera_controler/launch/: camera_controler_gphoto.launch  camera_controler_picam.launch
src/camera_controler/param/: timelaps.yaml  timelaps_canon.yaml  timelaps_nikon.yaml  timelaps_picam.yaml
src/camera_controler/scripts/: camera_controler_server.py  camera_handler.py  ip_sender.py  network_capture_listener.py  parameter_save.py  timelaps_action.py  timelaps_client.py  timelaps_server.py
src/camera_controler/src/: image_streamer.cpp
src/camera_drivers/: CMakeLists.txt
src/camera_drivers/launch/: gphoto_cam.launch
src/camera_drivers/scripts/: camera_driver.py  gphoto2_cli_caller.py  gphoto_cam_server.py  picamParameterHandler.py  picam_server.py
src/camera_master_server/: CMakeLists.txt  package.xml  users.xml
src/camera_master_server/launch/: camera_master_server.launch
src/camera_master_server/scripts/: file_transfer_action.py  file_transfer_client.py  file_transfer_server.py  master_server.py  network_capture_server.py  network_capture_talker.py  timelaps_client.py
src/camera_network_msgs/: CMakeLists.txt  package.xml
src/camera_network_msgs/action/: CameraControl.action  CameraDownload.action
src/camera_network_msgs/msg/: Capture.msg
src/camera_network_msgs/srv/: CaptureService.srv  VideoStream.srv
src/gphoto_cam/: CMakeLists.txt  package.xml
src/gphoto_cam/launch/: gphoto_cam.launch  gphoto_cam.launch~
src/gphoto_cam/scripts/: CameraParameterHandler.py  capture_camera_serv.py  capture_client.py  capture_serv.py  find_camera.py  get_camera_serv.py  get_client.py  gphoto2_cli_caller.py  gphoto2_cli_wrapper.py  gphoto_cam_server.py  set_camera_serv.py  set_client.py  set_serv.py
src/gphoto_cam/srv/: CameraData.srv  Capture.srv
src/pi_gpio/: package.xml
src/pi_gpio/src/: pigpio_server.cpp
src/picam/: CMakeLists.txt  package.xml
src/picam/launch/: picam.launch
src/picam/scripts/: ip_listener.py  ip_sender.py  picamParameterHandler.py  picam_server.py
src/robot_upstart/tmpl/: start
webGUI/: devicePage.html  dynamicPage.js  index.html  mainPage.html  mainPage.html~  networkPage.html  rosclient.js  style.css  style.css~  test.html  thetaPage.html
(+41 files in other folders)
