<package>
  <name>picam</name>
  <version>0.2.0</version>
  <description>The picam package</description>

   
  
  
  <maintainer email="mathieugaron@todo.todo">mathieugaron</maintainer>


  
  
  
  <license>TODO</license>


  
  
  
  


  
  
  
  


  
  
  
  
  
  
  
  
  
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  
  <export>
    
    

    

  </export>
</package>